Fix wrapping type title when reordering (#561)

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -830,6 +830,7 @@ textarea
         margin: 5px 0 0
       .title
         padding: 7px 7px 7px 14px
+        white-space: nowrap
         a
           color: #fff !important
         &:hover
